# ocaml_ddd_template

./: .editorconfig  .gitattributes  .gitignore  .ocamlformat  README.md  Taskfile.yaml  Taskfile.yml  dune-project  flake.nix  ocaml_template.opam
.githooks/: commit-msg
docs/: Main.html  index.html  type_Main.html
lib/: dune
lib/application/: dune  logger_sig.mli
lib/domain/: dune
lib/infrastructure/: dune  logger.ml
lib/interface/: dune
lib/presentation/: cli.ml  dune
test/: dune
test/application/: dune
test/domain/: dune
test/infrastructure/: dune
test/presentation/: dune
