(lang dune 3.20)

(name ocaml_template)

(generate_opam_files true)

(source
 (github djoleary/ocaml_template))

(authors "DJ O'Leary <dijitol@proton.me>")

(maintainers "DJ O'Leary <dijitol@proton.me>")

(license Unlicense)

(documentation https://github.com/djoleary/ocaml_template/docs/index.html)

(package
 (name ocaml_template)
 (synopsis "A template for OCaml projects")
 (description "A template for OCaml projects using Dune")
 (depends ocaml)
 (tags
  ("project template")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
